sonar.txt
Run ./gradle-4.10.1/bin/gradle build

Welcome to Gradle 4.10.1!

Here are the highlights of this release:
 - Incremental Java compilation by default
 - Periodic Gradle caches cleanup
 - Gradle Kotlin DSL 1.0-RC6
 - Nested included builds
 - SNAPSHOT plugin versions in the `plugins {}` block

For more details see https://docs.gradle.org/4.10.1/release-notes.html

Starting a Gradle Daemon (subsequent builds will be faster)

> Configure project :
org.gradle.api.plugins.HelpTasksPlugin@524a11fd
org.gradle.language.base.plugins.LifecycleBasePlugin@2a53c61b
org.gradle.api.plugins.BasePlugin@77d40d57
org.gradle.api.plugins.ReportingBasePlugin@4aaf568b
org.gradle.api.plugins.JavaBasePlugin@4ca8d567
org.gradle.api.plugins.JavaPlugin@787fb1f7
org.gradle.api.plugins.WarPlugin@2f96b51a
org.gradle.platform.base.plugins.ComponentBasePlugin@1fbda56d
org.gradle.language.base.plugins.LanguageBasePlugin@15344810
org.gradle.platform.base.plugins.BinaryBasePlugin@1041a348
org.gradle.api.plugins.JavaBasePluginRules@ae5fa3f
org.gradle.api.publish.plugins.PublishingPlugin@7881b0c3
org.gradle.api.publish.maven.plugins.MavenPublishPlugin@4fc2030b
vr.plugin.ManifestClasspathPlugin@5284b258
org.sonarqube.gradle.SonarQubePlugin@77158e35
classpath:: file collection
archiveName:: smedigitalbank-1111.war

> Task :generateDAL NO-SOURCE
> Task :generateER NO-SOURCE
> Task :generateOpenAPI NO-SOURCE
> Task :generateService NO-SOURCE
> Task :generateTAO NO-SOURCE
> Task :generateVO NO-SOURCE
> Task :compileJava
/home/runner/work/SMEDigitalBank/SMEDigitalBank/src/main/java/com/infosys/custom/ebanking/rest/sme/account/onboarding/v1/resources/CustomSMEOnboardingResource.java:17: error: package org.springframework.web.bind.annotation does not exist
import org.springframework.web.bind.annotation.RequestBody;
                                              ^
/home/runner/work/SMEDigitalBank/SMEDigitalBank/src/main/java/com/infosys/custom/ebanking/rest/sme/account/onboarding/v1/resources/CustomSMEOnboardingResource.java:96: error: cannot find symbol
	public Response createRequest(@Valid @RequestBody SmeProspect smeProspectInput,
	                                      ^
  symbol:   class RequestBody
  location: class CustomSMEOnboardingResource
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 4m 46s

> Task :compileJava FAILED

Deprecated Gradle features were used in this build, making it incompatible with Gradle 5.0.
Use '--warning-mode all' to show the individual deprecation warnings.
See https://docs.gradle.org/4.10.1/userguide/command_line_interface.html#sec:command_line_warnings
1 actionable task: 1 executed
Error: Process completed with exit code 1.
